--- a/src/app/system/system.component.css
+++ b/src/app/system/system.component.css
@@ -46,3 +46,7 @@
   .file-input {
     display: none;
   }
+
+  .iterations-selector {
+    font-size: small;
+  }
